# QOCO

./: .gitignore  README.md  pyproject.toml
converters/: pyomo_to_qiskit_qp.py  pyomo_to_qubo.py  qiskit_qp_to_qubo.py  qubo_to_qiskit_qp.py
converters/decomposition/: benders.py  column_generation.py  rolling_horizon.py
core/: converter.py  logging.py  optimizer.py  problem.py  qubo.py  sampler.py  solution.py  solved_problem.py
optimizers/: branch_and_bound.py  bruteforce.py  const.py  dwave_sa.py  gurobi.py  highs.py  illay.py  kipu_base.py  miray.py  qiskit_grover.py  qiskit_min_eigen.py  qiskit_numpy_mes.py  qiskit_qaoa.py  qiskit_sampling_vqe.py  qiskit_vqe.py  simulated_annealing.py
optimizers/decomposition/: benders.py  column_generation.py  lagrangian.py  multistage.py  sequential.py
pipeline/: context.py  pipeline.py
preproc/: base.py
pyomo_utils/: qubo.py  qubo_decode.py
qoco/: __init__.py
qoco/analysis/: __init__.py  qubo_analyser.py  qubo_heatmap.py
qoco/converters/: __init__.py  identity.py  pyomo_to_qlcbo.py  qubo_to_bqm.py  qubo_to_dict.py  qubo_to_ising.py  qubo_to_milp.py  qubo_to_wmis.py
qoco/core/: decoder.py  logging.py  optimizer.py  problem.py  qlcbo.py  qubo.py  solution.py
qoco/embedders/: __init__.py  quera_unit_disk_embedder.py
qoco/examples/: __init__.py
qoco/optimizers/: branch_and_bound.py  bruteforce.py  const.py  gurobi.py  highs.py  illay.py  kipu_base.py  (+17 more)
qubo_utils/: partition.py
tests/: __init__.py  test_column_generation_binpacking.py  test_graph_traversal.py  test_jobshop_problem.py  test_tsp_problem.py
(+114 files in other folders)
